ANTLR/output/tlvParser.java
// Generated from tlv.g4 by ANTLR 4.1

package com.comcast.cpe.cfb.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class tlvParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__19=1, T__18=2, T__17=3, T__16=4, T__15=5, T__14=6, T__13=7, T__12=8, 
		T__11=9, T__10=10, T__9=11, T__8=12, T__7=13, T__6=14, T__5=15, T__4=16, 
		T__3=17, T__2=18, T__1=19, T__0=20, WS=21, WS_NO_SKIP=22, SPACE=23, NO_WS=24, 
		LBRACE=25, RBRACE=26, SEMICOLON=27, LPARENTH=28, RPARENTH=29, COMMA=30, 
		DOT=31, COLON=32, SINGLE_QUOTE=33, DOUBLE_QUOTE=34, LBRACKET=35, RBRACKET=36, 
		TICK=37, INT=38, SINGLE_INT=39, SINGLE_OCTET=40, IP_PORT_RANGE=41, HEX_NIBBLE=42, 
		HEX_NIBBLE_UPPERCASE=43, HEX_NIBBLE_LOWERCASE=44, HEX_BYTE=45, HEX_BYTE_UPPER_CASE=46, 
		HEX_BYTE_LOWER_CASE=47, ALPHA_NUMERIC=48, IDENTIFIER=49, SINGLE_QUOTE_STRING=50, 
		EMBEDDED_STRING=51, HEX_ARRAY=52, VALUE_BIT_ARRAY=53, VALUE_DOUBLE_BYTE_ARRAY=54, 
		MAC_ADDRESS_ARRAY=55, IPv4_ADDRESS=56, IPv4_TRANSPORT_ADDRESS=57, IPv6_ADDRESS=58, 
		IPv6_TRANSPORT_ADDRESS=59, MULTI_LINE_COMMENT=60, INT_OID=61, STRING_OID=62, 
		EMBEDDED_NO_STRING=63, SINGLE_QUOTE_NO_STRING=64, SNMP_OID_1=65, SNMP_OID=66;
	public static final String[] tokenNames = {
		"<INVALID>", "'Gauge'", "'Docsis'", "'Counter32'", "'HexString'", "'PacketCable-1.0'", 
		"'Counter'", "'@'", "'='", "'Integer'", "'TimeTicks'", "'PacketCable-1.5'", 
		"'Main'", "'OctetString'", "'IpAddress'", "'/'", "'Gauge32'", "'Snmp64'", 
		"'Snmp11'", "'PacketCable-2.0'", "'Integer32'", "WS", "WS_NO_SKIP", "' '", 
		"''", "'{'", "'}'", "';'", "'('", "')'", "','", "'.'", "':'", "'''", "'\"'", 
		"'['", "']'", "'`'", "INT", "SINGLE_INT", "SINGLE_OCTET", "IP_PORT_RANGE", 
		"HEX_NIBBLE", "HEX_NIBBLE_UPPERCASE", "HEX_NIBBLE_LOWERCASE", "HEX_BYTE", 
		"HEX_BYTE_UPPER_CASE", "HEX_BYTE_LOWER_CASE", "ALPHA_NUMERIC", "IDENTIFIER", 
		"SINGLE_QUOTE_STRING", "EMBEDDED_STRING", "HEX_ARRAY", "VALUE_BIT_ARRAY", 
		"VALUE_DOUBLE_BYTE_ARRAY", "MAC_ADDRESS_ARRAY", "IPv4_ADDRESS", "IPv4_TRANSPORT_ADDRESS", 
		"IPv6_ADDRESS", "IPv6_TRANSPORT_ADDRESS", "MULTI_LINE_COMMENT", "INT_OID", 
		"STRING_OID", "EMBEDDED_NO_STRING", "SINGLE_QUOTE_NO_STRING", "SNMP_OID_1", 
		"SNMP_OID"
	};
	public static final int
		RULE_configType = 0, RULE_startTLV = 1, RULE_tlv = 2, RULE_sTlv = 3, RULE_type = 4, 
		RULE_typeValue = 5, RULE_subTypeValue = 6, RULE_subTLV = 7, RULE_subType = 8, 
		RULE_sub = 9, RULE_emptyTLV = 10, RULE_snmpType = 11, RULE_oid = 12, RULE_dataType = 13, 
		RULE_value = 14, RULE_snmp = 15, RULE_begin = 16;
	public static final String[] ruleNames = {
		"configType", "startTLV", "tlv", "sTlv", "type", "typeValue", "subTypeValue", 
		"subTLV", "subType", "sub", "emptyTLV", "snmpType", "oid", "dataType", 
		"value", "snmp", "begin"
	};

	@Override
	public String getGrammarFileName() { return "tlv.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public tlvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConfigTypeContext extends ParserRuleContext {
		public ConfigTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterConfigType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitConfigType(this);
		}
	}

	public final ConfigTypeContext configType() throws RecognitionException {
		ConfigTypeContext _localctx = new ConfigTypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_configType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 5) | (1L << 11) | (1L << 12) | (1L << 19))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartTLVContext extends ParserRuleContext {
		public SnmpContext snmp() {
			return getRuleContext(SnmpContext.class,0);
		}
		public TlvContext tlv() {
			return getRuleContext(TlvContext.class,0);
		}
		public EmptyTLVContext emptyTLV() {
			return getRuleContext(EmptyTLVContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public StartTLVContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startTLV; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterStartTLV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitStartTLV(this);
		}
	}

	public final StartTLVContext startTLV() throws RecognitionException {
		StartTLVContext _localctx = new StartTLVContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startTLV);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(36); tlv();
				}
				break;

			case 2:
				{
				setState(37); sub();
				}
				break;

			case 3:
				{
				setState(38); emptyTLV();
				}
				break;

			case 4:
				{
				setState(39); snmp();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TlvContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public TypeValueContext typeValue() {
			return getRuleContext(TypeValueContext.class,0);
		}
		public TlvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tlv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterTlv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitTlv(this);
		}
	}

	public final TlvContext tlv() throws RecognitionException {
		TlvContext _localctx = new TlvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tlv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(IDENTIFIER);
			setState(43); typeValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class STlvContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public SubTypeValueContext subTypeValue() {
			return getRuleContext(SubTypeValueContext.class,0);
		}
		public STlvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sTlv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSTlv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSTlv(this);
		}
	}

	public final STlvContext sTlv() throws RecognitionException {
		STlvContext _localctx = new STlvContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sTlv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(IDENTIFIER);
			setState(46); subTypeValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeValueContext extends ParserRuleContext {
		public TerminalNode IPv4_ADDRESS() { return getToken(tlvParser.IPv4_ADDRESS, 0); }
		public TerminalNode IPv6_ADDRESS() { return getToken(tlvParser.IPv6_ADDRESS, 0); }
		public TerminalNode SEMICOLON() { return getToken(tlvParser.SEMICOLON, 0); }
		public TerminalNode IPv4_TRANSPORT_ADDRESS() { return getToken(tlvParser.IPv4_TRANSPORT_ADDRESS, 0); }
		public TerminalNode INT() { return getToken(tlvParser.INT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public TerminalNode HEX_ARRAY() { return getToken(tlvParser.HEX_ARRAY, 0); }
		public TerminalNode VALUE_BIT_ARRAY() { return getToken(tlvParser.VALUE_BIT_ARRAY, 0); }
		public TerminalNode IPv6_TRANSPORT_ADDRESS() { return getToken(tlvParser.IPv6_TRANSPORT_ADDRESS, 0); }
		public TerminalNode VALUE_DOUBLE_BYTE_ARRAY() { return getToken(tlvParser.VALUE_DOUBLE_BYTE_ARRAY, 0); }
		public TerminalNode MULTI_LINE_COMMENT() { return getToken(tlvParser.MULTI_LINE_COMMENT, 0); }
		public TerminalNode MAC_ADDRESS_ARRAY() { return getToken(tlvParser.MAC_ADDRESS_ARRAY, 0); }
		public TypeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterTypeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitTypeValue(this);
		}
	}

	public final TypeValueContext typeValue() throws RecognitionException {
		TypeValueContext _localctx = new TypeValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << IDENTIFIER) | (1L << HEX_ARRAY) | (1L << VALUE_BIT_ARRAY) | (1L << VALUE_DOUBLE_BYTE_ARRAY) | (1L << MAC_ADDRESS_ARRAY) | (1L << IPv4_ADDRESS) | (1L << IPv4_TRANSPORT_ADDRESS) | (1L << IPv6_ADDRESS) | (1L << IPv6_TRANSPORT_ADDRESS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(54);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(51); match(SEMICOLON);
				}
				break;

			case 2:
				{
				{
				setState(52); match(SEMICOLON);
				{
				setState(53); match(MULTI_LINE_COMMENT);
				}
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubTypeValueContext extends ParserRuleContext {
		public TerminalNode IPv4_ADDRESS() { return getToken(tlvParser.IPv4_ADDRESS, 0); }
		public TerminalNode IPv6_ADDRESS() { return getToken(tlvParser.IPv6_ADDRESS, 0); }
		public TerminalNode SEMICOLON() { return getToken(tlvParser.SEMICOLON, 0); }
		public TerminalNode IPv4_TRANSPORT_ADDRESS() { return getToken(tlvParser.IPv4_TRANSPORT_ADDRESS, 0); }
		public TerminalNode INT() { return getToken(tlvParser.INT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public TerminalNode HEX_ARRAY() { return getToken(tlvParser.HEX_ARRAY, 0); }
		public TerminalNode VALUE_BIT_ARRAY() { return getToken(tlvParser.VALUE_BIT_ARRAY, 0); }
		public TerminalNode IPv6_TRANSPORT_ADDRESS() { return getToken(tlvParser.IPv6_TRANSPORT_ADDRESS, 0); }
		public TerminalNode VALUE_DOUBLE_BYTE_ARRAY() { return getToken(tlvParser.VALUE_DOUBLE_BYTE_ARRAY, 0); }
		public TerminalNode MULTI_LINE_COMMENT() { return getToken(tlvParser.MULTI_LINE_COMMENT, 0); }
		public TerminalNode MAC_ADDRESS_ARRAY() { return getToken(tlvParser.MAC_ADDRESS_ARRAY, 0); }
		public SubTypeValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subTypeValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSubTypeValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSubTypeValue(this);
		}
	}

	public final SubTypeValueContext subTypeValue() throws RecognitionException {
		SubTypeValueContext _localctx = new SubTypeValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subTypeValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << IDENTIFIER) | (1L << HEX_ARRAY) | (1L << VALUE_BIT_ARRAY) | (1L << VALUE_DOUBLE_BYTE_ARRAY) | (1L << MAC_ADDRESS_ARRAY) | (1L << IPv4_ADDRESS) | (1L << IPv4_TRANSPORT_ADDRESS) | (1L << IPv6_ADDRESS) | (1L << IPv6_TRANSPORT_ADDRESS))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(60);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(57); match(SEMICOLON);
				}
				break;

			case 2:
				{
				{
				setState(58); match(SEMICOLON);
				{
				setState(59); match(MULTI_LINE_COMMENT);
				}
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubTLVContext extends ParserRuleContext {
		public STlvContext sTlv() {
			return getRuleContext(STlvContext.class,0);
		}
		public SnmpContext snmp() {
			return getRuleContext(SnmpContext.class,0);
		}
		public EmptyTLVContext emptyTLV() {
			return getRuleContext(EmptyTLVContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public SubTLVContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subTLV; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSubTLV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSubTLV(this);
		}
	}

	public final SubTLVContext subTLV() throws RecognitionException {
		SubTLVContext _localctx = new SubTLVContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subTLV);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(62); sTlv();
				}
				break;

			case 2:
				{
				setState(63); sub();
				}
				break;

			case 3:
				{
				setState(64); emptyTLV();
				}
				break;

			case 4:
				{
				setState(65); snmp();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubTypeContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public SubTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSubType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSubType(this);
		}
	}

	public final SubTypeContext subType() throws RecognitionException {
		SubTypeContext _localctx = new SubTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_subType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubContext extends ParserRuleContext {
		public SubTLVContext subTLV(int i) {
			return getRuleContext(SubTLVContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(tlvParser.LBRACE, 0); }
		public SubTypeContext subType() {
			return getRuleContext(SubTypeContext.class,0);
		}
		public List<SubTLVContext> subTLV() {
			return getRuleContexts(SubTLVContext.class);
		}
		public TerminalNode RBRACE() { return getToken(tlvParser.RBRACE, 0); }
		public SubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSub(this);
		}
	}

	public final SubContext sub() throws RecognitionException {
		SubContext _localctx = new SubContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); subType();
			setState(71); match(LBRACE);
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72); subTLV();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 17) | (1L << 18) | (1L << IDENTIFIER))) != 0) );
			setState(77); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EmptyTLVContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(tlvParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(tlvParser.IDENTIFIER, 0); }
		public TerminalNode MULTI_LINE_COMMENT() { return getToken(tlvParser.MULTI_LINE_COMMENT, 0); }
		public EmptyTLVContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_emptyTLV; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterEmptyTLV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitEmptyTLV(this);
		}
	}

	public final EmptyTLVContext emptyTLV() throws RecognitionException {
		EmptyTLVContext _localctx = new EmptyTLVContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_emptyTLV);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(IDENTIFIER);
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(80); match(SEMICOLON);
				}
				break;

			case 2:
				{
				{
				setState(81); match(SEMICOLON);
				{
				setState(82); match(MULTI_LINE_COMMENT);
				}
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SnmpTypeContext extends ParserRuleContext {
		public SnmpTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_snmpType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).enterSnmpType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tlvListener ) ((tlvListener)listener).exitSnmpType(this);
		}
	}
